# canvas

./: .gitignore copy  env.template
code/: run.sh  runuv.sh
code/adv_examples/: .gitignore  1_download_all_classes_json.py  2_filter_json_files.py  3_list_courses_example.py  pyproject.toml
code/adv_examples/_files/: 3_class_reference.py  3_json_courses_analysis.py  3_markdown_example.py  4_basic.py  6_assignment_examples.py  assignment_examples.py  assignment_examples2.py  canvas_markdown_manager.py  course_manager.py  example.md  quiz_manager.py  student.py  upload_manager.py
code/adv_examples/_json/: course_data_2025_Fall.json  json_demo.py
code/adv_examples/canvas/: __init__.py  canvas_manager.py
code/adv_examples/markdown_templates/: assignment_template.md  lecture_notes_template.md  syllabus_template.md
code/canvasapi/: 1_canvas_utility.py  2_basic.py  3_class_reference.py  3_curl_command.sh  README.md
code/canvasapi_examples/: main.py  pyproject.toml
code/canvasutils/: __init__.py  _courses.py  _files.py  getinfo.py  logger.py  printinfo.py
code/canvasutils/folder/: folder_util.py
code/canvasutils/jsonutil/: json_processor.py  (+1 more)
code/simple_examples/: .env  1_setup_check.py  2_get_total_course_count.sh  3_canvasapi_quick_reference.py  pyproject.toml  requirements.txt
code/simple_examples/downloads/: README.md
lecture/canvasapi/: 1_canvas_utility.md  2_basic.md  3_class_reference.md  4_canvas_links.md
lecture/canvasapi_examples/: file_example.md  page_example.md
lecture/simple_examples/: canvas_api.md  canvasapi_quick_reference.md
