[project]
name = "simple-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.2,<4.0",
    "html2text>=2020.1.16,<2021.0",
    "markdown>=3.5.1,<4.0",
    "markdownify>=0.11.6,<0.12",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
]
